--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <th></th>
         </tr>
       </thead>
-      <tbody class="book-list"></tbody>
+      <tbody id="book-list"></tbody>
     </table>
   </div>
   <script src="app.js"></script>
