--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
       <tbody id="book-list"></tbody>
     </table>
   </div>
-  <script src="app.js"></script>
+  <script src="app_es6.js"></script>
 </body>
 </html>
